Produzione automatica Decreto di Decadenza

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -812,6 +812,7 @@ label.from_provider_list={0} ({1})
 label.from_segreteria=Da: Segreteria ECM
 label.from_segreteria_list=Segreteria ECM
 label.funzionigramma=Funzionigramma
+label.genera_decreto=Genera Decreto
 label.genera_file=Genera file
 label.generale=Generale
 label.gestione_domande=Ordine del Giorno
@@ -1538,6 +1539,8 @@ message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
 message.evento_validato_e_salvato_success=L'Evento è stato validato e salvato con successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
+message.impossibile_creare_pdf_decreto_decadenza=Impossibile creare il pdf Decreto di Decadenza.
+message.impossibile_creare_pdf_verbale=Impossibile creare il pdf del Verbale.
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.impostazioni_provider_aggiornate=Le impostazioni del Provider sono state aggiornate con successo.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
