Aggiunti 3 ulteriori allega file opzionali sotto al verbale in valutazione sul campo STD

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1467,6 +1467,9 @@ label.valutare=da valutare
 label.valutato=valutato
 label.valutatore=Valutatore
 label.valutazione=Valutazione
+label.valutazioneSulCampoAllegato1=Allegato 1 (opzionale)
+label.valutazioneSulCampoAllegato2=Allegato 2 (opzionale)
+label.valutazioneSulCampoAllegato3=Allegato 3 (opzionale)
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_complessiva=Valutazione complessiva
