Aggiunta all'audit del provider il responsabile amministrativo il responsabile del sistema informatico e il responsabile della qualita. Modificata l'etichetta del campo Pagato nel audit degli eventi da Pagato a Stato pagamento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1145,6 +1145,7 @@ label.paga=Paga
 label.pagamenti_annuali=Pagamenti Annuali
 label.pagamento_con_myPay_settings=Modalità di pagamento con myPay \n(default dipende dal gruppo del Provider)
 label.pagato=Pagato
+label.pagato_stato=Stato pagamento
 label.partita_iva=Partita IVA
 label.partners=Partners
 label.password=Password
