ADD ORA verbale valutazione sul CAmpo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -634,7 +634,9 @@ label.data_fine=Data fine
 label.data_fine_accreditamento=Data Fine Accreditamento
 label.data_inizio=Data inizio
 label.data_invio=Data invio
+label.data_ora=Data e ora
 label.data_ora_scadenza_valutazione=Data e Ora scadenza Valutazione
+label.data_ora_verifica_loco=Data e ora della verifica in loco
 label.data_pagamento=Data Pagamento
 label.data_protocollo=Data Protocollo
 label.data_scadenza_pagamento=Data scadenza pagamento
@@ -1124,6 +1126,7 @@ label.ok=ok
 label.opzione_selezione_domanda=Domanda {0}, Provider: {1} ({2})
 label.opzione_selezione_seduta=Seduta del {0} - ore: {1}
 label.ora=Ora
+label.ora_verifica_loco=Ora della verifica in loco
 label.orario=Orario
 label.orario_fine=Orario Fine
 label.orario_inizio=Orario Inizio
