Attesa di modifica al changestate

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -427,6 +427,7 @@ label.allega=Allega
 label.allega_contratti_sponsor=Allega Contratti Sponsor
 label.allega_quietanza=Allega quietanza
 label.allega_quietanza_di_pagamento=Allega la quietanza di pagamento
+label.allegare_file_da_protocollare=Allegare file da protocollare
 label.allegati=Allegati
 label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
@@ -909,6 +910,7 @@ label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_al_cogeaps=Invia al Co.Ge.A.P.S.
+label.invia_al_protocollo=Invia la Protocollo
 label.invia_domanda=Invia Domanda
 label.invia_email_commissione_seduta=Invia email di notifica alla Commissione ECM
 label.invia_email_valutazione_sul_campo=Invia Email Convocazione
@@ -1518,6 +1520,7 @@ label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di
 message.accesso_negato=ACCESSO NEGATO
 message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
+message.allegato_obbligatorio_e_firmato=\u00C8 obbligatorio allegare un file firmato digitalmente.
 message.anagrafica_salvata=Anagrafica aggiornata con successo!
 message.campi_salvati=Campi abilitati/disabilitati con successo!
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
