Gestione stato firma

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -844,6 +844,7 @@ label.importo=Importo
 label.impostazioni_attivita_provider=Impostazioni delle attività del Provider
 label.impostazioni_scadenze_evento=Impostazioni delle scadenze relative all'evento
 label.in_attesa_attivazione=In attesa di attivazione
+label.in_firma=Con documenti da firmare
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
 label.in_richiesta_integrazione=In Richiesta di Integrazione
