Aggiunta vaschetta domande con documenti da firmare

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -947,6 +947,7 @@ label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
 label.listaDomandeDaValutareIntegrazione=Lista Domande di Accreditamento di cui valutare l'integrazione
 label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
 label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
+label.listaDomandeInFirma=Lista delle Domande di Accreditamento con documenti da firmare
 label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 30 giorni)
 label.listaDomandeIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
 label.listaDomandeNonValutate=Lista delle ultime Domande di Accreditamento di cui non è stata fornita una valutazione
