Correzione alcune etichette

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -913,7 +913,7 @@ label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_al_cogeaps=Invia al Co.Ge.A.P.S.
-label.invia_al_protocollo=Invia la Protocollo
+label.invia_al_protocollo=Invia al Protocollo
 label.invia_domanda=Invia Domanda
 label.invia_email_commissione_seduta=Invia email di notifica alla Commissione ECM
 label.invia_email_valutazione_sul_campo=Invia Email Convocazione
@@ -1288,6 +1288,7 @@ label.ricevuto=Ricevuto
 label.richiedente=Richiedente
 label.richiestaAccreditamentoStandard=Richiesta di Accreditamento Standard
 label.richiestaIntegrazione=in richiesta di integrazione
+label.richiestaPreavvisoRigetto=in richiesta di preavviso di rigetto
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_conferma=Richiesta di conferma
 label.richiesta_conferma_cambio_crediti=Attenzione! Le modifiche effettuate comporteranno una modifica dei crediti attribuiti all''evento da: {0} a: {1}
