--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -631,6 +631,7 @@ label.dashboard_segreteria=Segreteria dashboard
 label.data=Data
 label.dataModifica=Data modifica
 label.data_creazione=Data Creazione
+label.data_delibera=Data Delibera
 label.data_fine=Data fine
 label.data_fine_accreditamento=Data Fine Accreditamento
 label.data_inizio=Data inizio
@@ -862,6 +863,7 @@ label.info_accreditamento=Info Accreditamento
 label.info_applicazione_integrazione=Le modifiche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
+label.info_delibera=Delibera numero {0} del {1}
 label.info_evento=Info Eventi
 label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
 label.info_metodologie_interattive=ATTENZIONE: nel caso in cui siano selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
@@ -1093,6 +1095,7 @@ label.note_osservazioni_integrazione=Note e Osservazioni sull'Integrazione
 label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di Rigetto
 label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
 label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
+label.numero_delibera=Delibera N°
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
