Chiusura task https://easyredmine.3di.it/issues/11663 : Accreditamento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -630,7 +630,9 @@ label.dashboard_referee=Referee dashboard
 label.dashboard_segreteria=Segreteria dashboard
 label.data=Data
 label.dataModifica=Data modifica
+label.data_comunicazione_decadenza=Data richiesta del Provider
 label.data_creazione=Data Creazione
+label.data_decreto=Data decreto
 label.data_delibera=Data Delibera
 label.data_fine=Data fine
 label.data_fine_accreditamento=Data Fine Accreditamento
@@ -1095,6 +1097,7 @@ label.note_osservazioni_integrazione=Note e Osservazioni sull'Integrazione
 label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di Rigetto
 label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
 label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
+label.numero_decreto=Numero decreto
 label.numero_delibera=Delibera N°
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
@@ -1489,6 +1492,7 @@ label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_complessiva=Valutazione complessiva
 label.valutazione_domande_seduta=Valutazione delle Domande della Seduta del {0}
 label.valutazione_sul_campo=Valutazione sul Campo
+label.valutazione_team_leader_non_effettuata=Valutazione Team Leader non effettuata per scadenza termini
 label.valutazioni=Valutazioni
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
