task https://easyredmine.3di.it/issues/11667 : Protocollo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -311,6 +311,7 @@ error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
+error.entrambi_valori_per_delibera=Per salvare la delibera sono necessari entrambi i dati.
 error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 \n - l'impegno complessivo per il partecipante sia almeno di 8 ore \n - massimo un partecipante per il ruolo Coordinatore
@@ -418,6 +419,7 @@ label.aggiorna=Aggiorna
 label.aggiorna_account=Aggiorna Account
 label.aggiungi=Aggiungi
 label.aggiungi_componente=Aggiungi componente del comitato
+label.aggiungi_delibera=Aggiungi dati della delibera
 label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.aggiungi_ruolo=Aggiungi Ruolo
@@ -696,6 +698,7 @@ label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
 label.denominazione_legale_login=Denominazione Legale della struttura richiedente
 label.denominazione_legale_provider=Denominazione Legale del Provider
+label.denominazione_provider=Denominazione del Provider
 label.descrizione=Descrizione
 label.descrizione_del_progetto=Descrizione del progetto e rilevanza formativa
 label.descrizione_verifica_ricadute_formative=Descrizione verifica ricadute formativa
@@ -880,6 +883,7 @@ label.info_tooltip_numero_partecipanti_fsc=Vincolo di 1 tutor per massimo 5 part
 label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
 label.informazioni_sede=Informazioni relative alla Sede dell'Evento
 label.inserimento_contratto_sponsor=Inserimento dell'allegato Contratto per lo Sponsor:\u0020
+label.inserimento_dati_delibera=Inserimento dei dati della Delibera
 label.inserimento_file_note=Inserimento Allegato (opzionale)
 label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cui il Provider deve completare l'integrazione
 label.inserimento_numero_verbale=Inserire il numero del Verbale della Seduta
@@ -939,6 +943,7 @@ label.label.rivaluta=Rivaluta
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.legale_rappresentante_del_provider=Legale Rappresentante del Provider
+label.letteraAccompagnatoria=Lettera Accompagnatoria
 label.linee_guida_eventi=Linee guida eventi
 label.lingua_straniera_utilizzata=Lingua straniera utilizzata
 label.list_eventi=Lista degli eventi del provider {0}
@@ -1544,6 +1549,7 @@ message.comunicazione_chiusa=La Comunicazione è stata chiusa con successo.
 message.comunicazione_inviata=Comunicazione inviata con successo.
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
+message.dati_della_delibera_salvati=Dati della delibera salvati con successo.
 message.documento_inviato_al_protocollo=Documento Inviato al protocollo.
 message.domanda_aggiunta=Domanda di Accreditamento inserita nella Seduta con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
@@ -1576,6 +1582,7 @@ message.invio_integrazione_success=Integrazione della Domanda di Accreditamento 
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale e al delegato del Legale Rappresentante.
 message.mail_inviata=Email inviata
 message.motivazione_enablefield_required=\u00C8 obbligatorio specificare una motivazione per ogni campo abilitato.
+message.obbligatorio_allegare_decreto_lettera=\u00C8 obbligatorio allegare il Decreto di Accreditamento e la Lettera Accompagnatoria firmati digitalmente.
 message.osservazioni_salvate=Osservazioni salvate con successo.
 message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
@@ -1622,3 +1629,5 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.lettera_accompagnatoria_accreditamento=Lettera Accompagnatoria Decreto Accreditamento
+label.lettera_accompagnatoria_diniego=Lettera Accompagnatoria Decreto Diniego
