--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1527,7 +1527,7 @@ label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_quietanza=Visualizza quietanza
 label.visualizza_valutazioni=Visualizza Valutazioni
-label.visualizzazione=Visualizzazione
+label.visualizzazione=Visualizzazione {0}
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
 label.visualizzazione_dati_anagrafici=Visualizzazione dati anagrafici di {0} {1}
 label.visualizzazione_evento=Visualizzazione Evento {0} ({1})
@@ -1631,3 +1631,4 @@ month.ottobre=Ottobre
 month.settembre=Settembre
 label.lettera_accompagnatoria_accreditamento=Lettera Accompagnatoria Decreto Accreditamento
 label.lettera_accompagnatoria_diniego=Lettera Accompagnatoria Decreto Diniego
+label.archivia_selezionate=Archivia selezionate
