task: https://3dinformatica.easyredmine.com/issues/11670 Rendicontazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1633,3 +1633,11 @@ label.lettera_accompagnatoria_accreditamento=Lettera Accompagnatoria Decreto Acc
 label.lettera_accompagnatoria_diniego=Lettera Accompagnatoria Decreto Diniego
 label.archivia_selezionate=Archivia selezionate
 label.visualizzazione=Visualizzazione
+label.partecipanti_evento_codEvento=Partecipanti dell''Evento {0}
+label.reclutato_short=Rec.
+label.tipologia_partecipante=Tipologia Partecipante
+label.nCrediti=N. Crediti
+label.data_crediti_acquisiti=Data crediti acquisiti
+label.sponsor=Sponsor
+label.genera_attestati=Genera Attestati
+label.sistema_regionale_ecm=Sistema Regionale ECM
