task: https://3dinformatica.easyredmine.com/issues/11698 Relaz. Annuale

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1641,3 +1641,6 @@ label.data_crediti_acquisiti=Data crediti acquisiti
 label.sponsor=Sponsor
 label.genera_attestati=Genera Attestati
 label.sistema_regionale_ecm=Sistema Regionale ECM
+message.bozza_relazione_annuale_salvata=Relazione Annuale salvata in stato di bozza con successo.
+label.rielabora=Rielabora
+message.relazione_annuale_rielaborata=Relazione Annuale rielaborata e salvata in bozza con successo.
