Task: 11815 e Task: 11665 bugfix + tasto indietro
https://3dinformatica.easyredmine.com/issues/11665
https://3dinformatica.easyredmine.com/issues/11815

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -478,6 +478,7 @@ label.appartiene_a_obiettivo_strategico_nazionale=Obiettivo strategico Nazionale
 label.applica=Applica
 label.apri_tutte=Apri tutte
 label.archivia=Archivia
+label.archivia_selezionate=Archivia selezionate
 label.argomento=Argomento
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovi Referee
@@ -501,6 +502,7 @@ label.blocca=Blocca
 label.blocca_seduta=Blocca Seduta
 label.bloccata=Bloccata
 label.bloccate=Bloccate
+label.bozza=Bozza
 label.brochure_evento=Brochure dell'evento
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
@@ -634,6 +636,7 @@ label.data=Data
 label.dataModifica=Data modifica
 label.data_comunicazione_decadenza=Data richiesta del Provider
 label.data_creazione=Data Creazione
+label.data_crediti_acquisiti=Data crediti acquisiti
 label.data_decreto=Data decreto
 label.data_delibera=Data Delibera
 label.data_fine=Data fine
@@ -823,6 +826,7 @@ label.from_provider_list={0} ({1})
 label.from_segreteria=Da: Segreteria ECM
 label.from_segreteria_list=Segreteria ECM
 label.funzionigramma=Funzionigramma
+label.genera_attestati=Genera Attestati
 label.genera_decreto=Genera Decreto
 label.genera_file=Genera file
 label.generale=Generale
@@ -944,6 +948,8 @@ label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.legale_rappresentante_del_provider=Legale Rappresentante del Provider
 label.letteraAccompagnatoria=Lettera Accompagnatoria
+label.lettera_accompagnatoria_accreditamento=Lettera Accompagnatoria Decreto Accreditamento
+label.lettera_accompagnatoria_diniego=Lettera Accompagnatoria Decreto Diniego
 label.linee_guida_eventi=Linee guida eventi
 label.lingua_straniera_utilizzata=Lingua straniera utilizzata
 label.list_eventi=Lista degli eventi del provider {0}
@@ -1026,6 +1032,7 @@ label.mostra_storico_valutazioni=Mostra storico valutazioni
 label.mostra_valutazione=Mostra valutazione
 label.mostra_valutazioni_complessive=Mostra valutazioni complessive
 label.motivazione=Motivazione
+label.nCrediti=N. Crediti
 label.n_verbale=Verbale numero
 label.nascondi=Nascondi
 label.natura_organizzazione=Natura dell'Organizzazione
@@ -1166,6 +1173,7 @@ label.pagamenti_annuali=Pagamenti Annuali
 label.pagamento_con_myPay_settings=Modalità di pagamento con myPay \n(default dipende dal gruppo del Provider)
 label.pagato=Pagato
 label.pagato_stato=Stato pagamento
+label.partecipanti_evento_codEvento=Partecipanti dell''Evento {0}
 label.partita_iva=Partita IVA
 label.partners=Partners
 label.password=Password
@@ -1249,6 +1257,7 @@ label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.razionale=Razionale
 label.reclutamentoDiretto=Reclutamento Diretto
 label.reclutamento_diretto=Reclutamento Diretto
+label.reclutato_short=Rec.
 label.recupera_password=Recupera password
 label.referee=Referee
 label.referee_ecm=Referee ECM
@@ -1312,6 +1321,7 @@ label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
 label.riedita=Riedita
 label.riedizione_evento=Crea Riedizione
+label.rielabora=Rielabora
 label.riepilogo=Riepilogo
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_domandaTipo_providerDenominazione_providerId=Riepilogo della Domanda di Accreditamento {0}, richiesta dal Provider {1}, ID {2}
@@ -1390,6 +1400,7 @@ label.sezione_2=Sezione 2
 label.sezione_3=Sezione 3
 label.si_avvale_di_partner=L’evento si avvale di partner?
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
+label.sistema_regionale_ecm=Sistema Regionale ECM
 label.sito_internet=Sito internet
 label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
@@ -1397,6 +1408,7 @@ label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
 label.sostituto=Sostituto
 label.sottoscrivente=Sottoscrivente
 label.sottoscrivente_verbale=Sottoscrivente della Valutazione sul Campo
+label.sponsor=Sponsor
 label.sponsorFile=Contratto Sponsor
 label.sponsors=Sponsors
 label.sposta=Sposta
@@ -1444,6 +1456,7 @@ label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accred
 label.tipologia_formativa_tipologiaAccreditamento=Tipologia Formativa - Accreditamento per tipologia
 label.tipologia_list=Tipologia
 label.tipologia_obiettivi_formativi=Obiettivi formativi
+label.tipologia_partecipante=Tipologia Partecipante
 label.tipologia_sede=Tipologia Sede
 label.titolare=Titolare
 label.titolaresostituto=Titolare/Sostituto
@@ -1480,6 +1493,7 @@ label.vademecum=Vademecum relativo alle regole di presentazione della Domanda
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.vai_all_evento=Vai all'Evento
 label.vai_all_evento=Visualizza Evento
+label.validata=Validata
 label.validazione=Validazione
 label.valido=valido
 label.valuta=Valuta
@@ -1527,18 +1541,20 @@ label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_quietanza=Visualizza quietanza
 label.visualizza_valutazioni=Visualizza Valutazioni
-label.visualizzazione_withParam=Visualizzazione {0}
+label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
 label.visualizzazione_dati_anagrafici=Visualizzazione dati anagrafici di {0} {1}
 label.visualizzazione_evento=Visualizzazione Evento {0} ({1})
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
+label.visualizzazione_withParam=Visualizzazione {0}
 label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
 message.accesso_negato=ACCESSO NEGATO
 message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.allegato_obbligatorio_e_firmato=\u00C8 obbligatorio allegare un file firmato digitalmente.
 message.anagrafica_salvata=Anagrafica aggiornata con successo!
+message.bozza_relazione_annuale_salvata=Relazione Annuale salvata in stato di bozza con successo.
 message.campi_salvati=Campi abilitati/disabilitati con successo!
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
@@ -1590,9 +1606,10 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.presa_visione_success=Presa Visione eseguita correttamente.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
-message.provider_bloccato_success=Provider bloccato con successo.
+message.provider_bloccato_success=Richiesta di blocco del Provider inviata in Protocollazione con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.quietanza_pagamento_salvata=La Quietanza del Pagamento è stata salvata con successo.
+message.relazione_annuale_rielaborata=Relazione Annuale rielaborata e salvata in bozza con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
 message.richiesta_variazione_dati_inviata=Richiesta variazione dati inviata con successo.
 message.risposta_inviata=Risposta inviata con successo.
@@ -1629,18 +1646,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.lettera_accompagnatoria_accreditamento=Lettera Accompagnatoria Decreto Accreditamento
-label.lettera_accompagnatoria_diniego=Lettera Accompagnatoria Decreto Diniego
-label.archivia_selezionate=Archivia selezionate
-label.visualizzazione=Visualizzazione
-label.partecipanti_evento_codEvento=Partecipanti dell''Evento {0}
-label.reclutato_short=Rec.
-label.tipologia_partecipante=Tipologia Partecipante
-label.nCrediti=N. Crediti
-label.data_crediti_acquisiti=Data crediti acquisiti
-label.sponsor=Sponsor
-label.genera_attestati=Genera Attestati
-label.sistema_regionale_ecm=Sistema Regionale ECM
-message.bozza_relazione_annuale_salvata=Relazione Annuale salvata in stato di bozza con successo.
-label.rielabora=Rielabora
-message.relazione_annuale_rielaborata=Relazione Annuale rielaborata e salvata in bozza con successo.
+label.alert_fsc_tutor_partecipanti=ATTENZIONE! Si ricorda il rispetto del rapporto tutor/discente di 1:5
