--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1647,3 +1647,5 @@ month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
 label.alert_fsc_tutor_partecipanti=ATTENZIONE! Si ricorda il rispetto del rapporto tutor/discente di 1:5
+message.email_non_trovata=L'email inserita non risulta associata a nessun account
+label.nessuna_comunicazione_selezionata=Nessuna comunicazione selezionata
