Bug fix e migliorie varie: 15/06/2017

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,5 @@
 
+
 ######## LABEL ########
 #label.piano_formativo.id=label.id
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
@@ -356,6 +357,7 @@ error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
 error.pochi_partecipanti200=Il numero minimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
+error.ratio_metodologie_interattive_res=ATTENZIONE! Sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/relatore/docente titolare)
 error.repeat=non corrisponde
 error.risultato_atteso_non_utilizzato=Risultato atteso non utilizzato
 error.same_password=Si prega di inserire una nuova password
@@ -424,7 +426,7 @@ label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
-label.alert_metodologie_interattive_res=ATTENZIONE: sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
+label.alert_fsc_tutor_partecipanti=ATTENZIONE! Si ricorda il rispetto del rapporto tutor/discente di 1:5
 label.allega=Allega
 label.allega_contratti_sponsor=Allega Contratti Sponsor
 label.allega_quietanza=Allega quietanza
@@ -1055,6 +1057,7 @@ label.nessun_responsabile_registrato=Nessun Responsabile Registrato
 label.nessun_sponsor_list=Non ci sono sponsor!
 label.nessuna_attivita_registrata=Nessuna Attività Registrata
 label.nessuna_comunicazione_ricevuta_ancora=Non è stata ancora ricevuta nessuna Comunicazione
+label.nessuna_comunicazione_selezionata=Nessuna comunicazione selezionata
 label.nessuna_comunicazione_tipologia=Non ci sono Comunicazioni {0}!
 label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
@@ -1099,6 +1102,7 @@ label.non_risposta=Non risposta
 label.non_risposte=Non risposte
 label.non_risposte_al_provider=ancora da rispondere per il Provider
 label.non_specificato=non specificato
+label.non_sponsorizzato=Non sponsorizzato
 label.non_valido=non valido
 label.non_valutato=non valutato
 label.not_enabled=Disabilitato
@@ -1410,6 +1414,7 @@ label.sottoscrivente=Sottoscrivente
 label.sottoscrivente_verbale=Sottoscrivente della Valutazione sul Campo
 label.sponsor=Sponsor
 label.sponsorFile=Contratto Sponsor
+label.sponsorizzato=Sponsorizzato
 label.sponsors=Sponsors
 label.sposta=Sposta
 label.stato=Stato
@@ -1572,6 +1577,7 @@ message.domanda_inviata=La domanda è stata inviata correttamente alla segreteri
 message.domanda_rimossa=Domanda di Accreditamento rimossa dalla Seduta con successo.
 message.domanda_spostata=Domanda di Accreditamento spostata dalla Seduta con successo.
 message.email_convocazione_valutazione_sul_campo_inviata=Email Convocazione Valutazione Sul Campo Inviata.
+message.email_non_trovata=L'email inserita non risulta associata a nessun account
 message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
@@ -1600,6 +1606,7 @@ message.mail_inviata=Email inviata
 message.motivazione_enablefield_required=\u00C8 obbligatorio specificare una motivazione per ogni campo abilitato.
 message.obbligatorio_allegare_decreto_lettera=\u00C8 obbligatorio allegare il Decreto di Accreditamento e la Lettera Accompagnatoria firmati digitalmente.
 message.osservazioni_salvate=Osservazioni salvate con successo.
+message.pagamento_gia_in_corso=Risulta già in corso un tentativo di pagamento, si prega di attenderne il risultato prima di riprovare.
 message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
 message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
@@ -1646,6 +1653,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.alert_fsc_tutor_partecipanti=ATTENZIONE! Si ricorda il rispetto del rapporto tutor/discente di 1:5
-message.email_non_trovata=L'email inserita non risulta associata a nessun account
-label.nessuna_comunicazione_selezionata=Nessuna comunicazione selezionata
