Finito di implementare i filtri dell'audit e le tabelle per Eng

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1653,3 +1653,10 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.filtra_audit_allegati=Sezione allegati
+label.filtra_audit_stato_evento=Sezione stati evento
+label.filtra_audit_pagamento=Sezione pagamenti
+label.filtra_audit_rendicontazione=Sezione rendicontazioni
+label.ripristina_tabella=Rispristina tabella
+label.filtra_relazione_annuale=Sezione relazione annuale
+label.filtra_piano_formativo=Sezione piano formativo
