Fine modulo riedizioni 23/06/2017

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1664,6 +1664,8 @@ label.seleziona_tutti=Seleziona tutti
 label.sposta_orario_selezionati=Sposta orario selezionati
 label.orario_non_valido=Orario non valido
 label.slittamento_orario_attivita=Slittamento dell'orario dell'attività
-label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del blocco evidenziato verranno spostate automaticamente dal sistama.
+label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del dettaglio verranno spostate automaticamente dal sistama.
 label.nessun_attivita_selezionata=Nessun attività selezionata
 message.non_risulta_attivo_nessun_accreditamento=Non risulta nessun accreditamento attivo per questo provider!
+error.ordinare_le_date_intermedie=Si prega di mantenere l'ordine crescente delle date intermedie
+message.attenzione_spostamento_date_non_valido=L'orario di inizio selezionato non è valido poichè causerebbe lo slittamento delle attività oltre la giornata prefissa
