--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -295,6 +295,7 @@ error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
+error.data_inizio_antecedente_al_padre=La data di inizio di una riedizione non può essere antecedente a quella dell'evento rieditato
 error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
 error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
 error.data_intermedia_annullata=Non è possibile annullare la data intermedia
@@ -351,6 +352,7 @@ error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
 error.ora_non_valida1=Ora non valida! La Seduta non può essere inserita in un orario già passato.
 error.ora_non_valida2=Ora non valida! La Seduta non può essere inserita in un orario comprendente i prossimi 30 minuti.
+error.ordinare_le_date_intermedie=Si prega di mantenere l'ordine crescente delle date intermedie
 error.partecipanti_AUDIT_ore=Minimo 2 ore non frazionabili multiple di 2 per le figure di tipo partecipante
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
@@ -722,6 +724,7 @@ label.disabilita=Disabilita
 label.disciplina=Disciplina
 label.discipline=Discipline
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
+label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del dettaglio verranno spostate automaticamente dal sistama.
 label.docente=Docente
 label.docente_tutor=Docente / Tutor
 label.docenti=Docenti
@@ -812,6 +815,12 @@ label.fileDaFirmare=File da firmare
 label.fileId=Id File
 label.file_descrizione=Descrizione
 label.file_nome=File
+label.filtra_audit_allegati=Sezione allegati
+label.filtra_audit_pagamento=Sezione pagamenti
+label.filtra_audit_rendicontazione=Sezione rendicontazioni
+label.filtra_audit_stato_evento=Sezione stati evento
+label.filtra_piano_formativo=Sezione piano formativo
+label.filtra_relazione_annuale=Sezione relazione annuale
 label.filtri=Filtra:
 label.firma_digitalmente=Firma digitalmente
 label.firma_nomeFirmatario=Firma {0} ({1}) :
@@ -1041,6 +1050,7 @@ label.natura_organizzazione=Natura dell'Organizzazione
 label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_allegato=Nessun allegato disponibile
+label.nessun_attivita_selezionata=Nessun attività selezionata
 label.nessun_componente_comitato=Nessun componente del comitato scientifico inserito
 label.nessun_contratto=Nessun contratto
 label.nessun_cv=Nessun CV
@@ -1158,6 +1168,7 @@ label.ora_verifica_loco=Ora della verifica in loco
 label.orario=Orario
 label.orario_fine=Orario Fine
 label.orario_inizio=Orario Inizio
+label.orario_non_valido=Orario non valido
 label.ore=Ore
 label.ore_attivita=Ore Attività
 label.ore_corso=Ore corso
@@ -1340,6 +1351,7 @@ label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
+label.ripristina_tabella=Pulisci tabella
 label.rispondi=Rispondi
 label.risposta=Risposta
 label.risposta_a_comunicazione=Nuova Risposta alla Comunicazione
@@ -1395,6 +1407,7 @@ label.seleziona_evento=Seleziona un evento
 label.seleziona_referee=Seleziona {0} Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
 label.seleziona_referee_variazione_dati=Seleziona il Referee per la valutazione della Variazione dei Dati e dei Documenti
+label.seleziona_tutti=Seleziona tutti
 label.selezionare_le_fasi_da_inserire=Selezionare le fasi che si desidera inserire
 label.settimana=settimana
 label.settoriale=Settoriale
@@ -1406,6 +1419,7 @@ label.si_avvale_di_partner=L’evento si avvale di partner?
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sistema_regionale_ecm=Sistema Regionale ECM
 label.sito_internet=Sito internet
+label.slittamento_orario_attivita=Slittamento dell'orario dell'attività
 label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
@@ -1417,6 +1431,7 @@ label.sponsorFile=Contratto Sponsor
 label.sponsorizzato=Sponsorizzato
 label.sponsors=Sponsors
 label.sposta=Sposta
+label.sposta_orario_selezionati=Sposta orario selezionati
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_accreditamento=Stato Accreditamento
@@ -1559,6 +1574,7 @@ message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.allegato_obbligatorio_e_firmato=\u00C8 obbligatorio allegare un file firmato digitalmente.
 message.anagrafica_salvata=Anagrafica aggiornata con successo!
+message.attenzione_spostamento_date_non_valido=L'orario di inizio selezionato non è valido poichè causerebbe lo slittamento delle attività oltre la giornata prefissa
 message.bozza_relazione_annuale_salvata=Relazione Annuale salvata in stato di bozza con successo.
 message.campi_salvati=Campi abilitati/disabilitati con successo!
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
@@ -1604,6 +1620,7 @@ message.invio_integrazione_success=Integrazione della Domanda di Accreditamento 
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale e al delegato del Legale Rappresentante.
 message.mail_inviata=Email inviata
 message.motivazione_enablefield_required=\u00C8 obbligatorio specificare una motivazione per ogni campo abilitato.
+message.non_risulta_attivo_nessun_accreditamento=Non risulta nessun accreditamento attivo per questo provider!
 message.obbligatorio_allegare_decreto_lettera=\u00C8 obbligatorio allegare il Decreto di Accreditamento e la Lettera Accompagnatoria firmati digitalmente.
 message.osservazioni_salvate=Osservazioni salvate con successo.
 message.pagamento_gia_in_corso=Risulta già in corso un tentativo di pagamento, si prega di attenderne il risultato prima di riprovare.
@@ -1653,19 +1670,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.filtra_audit_allegati=Sezione allegati
-label.filtra_audit_stato_evento=Sezione stati evento
-label.filtra_audit_pagamento=Sezione pagamenti
-label.filtra_audit_rendicontazione=Sezione rendicontazioni
-label.ripristina_tabella=Pulisci tabella
-label.filtra_relazione_annuale=Sezione relazione annuale
-label.filtra_piano_formativo=Sezione piano formativo
-label.seleziona_tutti=Seleziona tutti
-label.sposta_orario_selezionati=Sposta orario selezionati
-label.orario_non_valido=Orario non valido
-label.slittamento_orario_attivita=Slittamento dell'orario dell'attività
-label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del dettaglio verranno spostate automaticamente dal sistama.
-label.nessun_attivita_selezionata=Nessun attività selezionata
-message.non_risulta_attivo_nessun_accreditamento=Non risulta nessun accreditamento attivo per questo provider!
-error.ordinare_le_date_intermedie=Si prega di mantenere l'ordine crescente delle date intermedie
-message.attenzione_spostamento_date_non_valido=L'orario di inizio selezionato non è valido poichè causerebbe lo slittamento delle attività oltre la giornata prefissa
