--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -725,7 +725,7 @@ label.disabilita=Disabilita
 label.disciplina=Disciplina
 label.discipline=Discipline
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
-label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del dettaglio verranno spostate automaticamente dal sistama.
+label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del dettaglio verranno spostate automaticamente dal sistema.
 label.docente=Docente
 label.docente_tutor=Docente / Tutor
 label.docenti=Docenti
