Bugfix vari p.to 8 - Return link registro operazioni

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -314,6 +314,7 @@ error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
+error.empty_crediti=\u00C8 obbligatorio compilare o il Campo Crediti ECM proposti dal Sistema o il Campo Crediti ECM attribuiti dal Provider
 error.entrambi_valori_per_delibera=Per salvare la delibera sono necessari entrambi i dati.
 error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore \n - massimo un partecipante per il ruolo Coordinatore
