bugfix synch su calcolo costo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1262,6 +1262,7 @@ label.pubblica=Pubblica
 label.pulisci=Pulisci
 label.qualifica=Qualifica
 label.quietanzaPagamento=Quietanza di Pagamento
+label.pagato_con_quietanza=Pagato con quietanza
 label.quota_partecipazione=Quota di partecipazione
 label.quote_di_partecipazione=Quote di partecipazione
 label.ragione_sociale=Ragione Sociale
