--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1467,6 +1467,7 @@ label.tipo_domanda=Tipologia domanda
 label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
 label.tipo_organizzatore=Tipo Organizzatore
 label.tipo_provider=Tipo:
+label.tipo_standart=Tipo Standart
 label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
