--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -910,6 +910,9 @@ label.inserimento_relazione_annuale=Inserimento Relazione Annuale {0}
 label.inserimento_rendicontazione=Inserimento Rendicontazione
 label.inserimento_sede=Inserimento Sede
 label.inserimento_seduta=Inserimento nuova Seduta
+label.sposta_data_scadenza_pagamento=Sposta
+label.sposta_conferma=Conferma
+label.sposta= Sposta data scadenza pagamento
 label.inserimento_sottoscrivente_verbale=Inserimento del Sottoscrivente del Verbale della Valutazione sul Campo
 label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
@@ -1031,6 +1034,7 @@ label.modifica_sede_legale=Modifica Sede Legale
 label.modifica_sede_operativa=Modifica Sede Operativa
 label.modifica_sedi=Inserimento/rimozione di sedi
 label.modifica_seduta=Modifica della Seduta del {0}
+label.modifica_data_scadenza=la data di scadenza del pagamento{0}
 label.modifica_utente=Modifica Utente
 label.modifica_verbale=Modifica Verbale
 label.modifica_verbale_valutazione_sul_campo=Modifica del Verbale della Valutazione sul Campo
@@ -1263,6 +1267,12 @@ label.pulisci=Pulisci
 label.qualifica=Qualifica
 label.quietanzaPagamento=Quietanza di Pagamento
 label.pagato_con_quietanza=Pagato con quietanza
+label.quotaAnnuale= Quota annuale
+label.quotaAnnuale_list= Lista di quote annuale non pagate e scadute
+label.id_quotaAnnuale= Id
+label.denominazioneLegale= Denominazione Legale
+label.dataScadenzaPagamento = Data Scadenza Pagamento
+label.importo = Importo
 label.quota_partecipazione=Quota di partecipazione
 label.quote_di_partecipazione=Quote di partecipazione
 label.ragione_sociale=Ragione Sociale
@@ -1433,7 +1443,7 @@ label.sponsor=Sponsor
 label.sponsorFile=Contratto Sponsor
 label.sponsorizzato=Sponsorizzato
 label.sponsors=Sponsors
-label.sposta=Sposta
+label.sposta=Sposta data scadenza pagamento
 label.sposta_orario_selezionati=Sposta orario selezionati
 label.stato=Stato
 label.stato_account=Stato Account
